--- a/UnitTestProject1_SeleniumDataDrivenMasterProject_1.0/packages.config
+++ b/UnitTestProject1_SeleniumDataDrivenMasterProject_1.0/packages.config
@@ -1,7 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="7.5.1" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="7.5.0" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="7.5.0" targetFramework="net472" />
+  <package id="ExtentReports" version="5.0.4" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Testing.Extensions.Telemetry" version="1.4.3" targetFramework="net472" />
   <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.4.3" targetFramework="net472" />
   <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.4.3" targetFramework="net472" />
@@ -10,16 +23,27 @@
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.11.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="3.6.3" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="3.6.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="NUnit" version="4.2.2" targetFramework="net472" />
+  <package id="RazorEngine.NetCore.nixFix" version="1.0.1" targetFramework="net472" />
   <package id="Selenium.Support" version="4.26.1" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.26.1" targetFramework="net472" />
   <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.35.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="8.0.4" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
+  <package id="System.Reactive" version="6.0.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="8.0.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
